tests/type-errors/no_contract_invariant_in_fun_spec.arl
archetype no_contract_invariant_in_fun_spec

entry main () {
  specification {
    contract invariant i1 {
      true
    }
  }
  effect {
    require(true)
  }
}
